# cadastro_clientes_flet

./: README (2).md  README.md  cadastro_clientes_flet.py  clientes.db  pyproject.toml
